# RollingStatistics

./: CMakeLists.txt  LICENSE.txt  README.md  rolling_statistics.hpp  rolling_statistics_py.cp36-win_amd64.pyd  rolling_statistics_py.cpp  usage_example_cpp.cpp  usage_example_python.py
src/: rolling_statistics.hpp  rolling_statistics_py.cpp  setup.py
